--- a/cointopay/views/templates/front/ctp_payment_success.html
+++ b/cointopay/views/templates/front/ctp_payment_success.html
@@ -1,5 +1,4 @@
-<?php
-/**
+{**
  * 2007-2019 PrestaShop and Contributors
  *
  * NOTICE OF LICENSE
@@ -22,29 +21,19 @@
  * @copyright 2007-2019 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  * International Registered Trademark & Property of PrestaShop SA
- */
+ *}
 
-require_once(dirname(__FILE__) . '../../../config/config.inc.php');
-require_once(dirname(__FILE__) . '../../../init.php');
-
-// get merchant coins
-if (Tools::getIsset('merchant')) {
-    $merchant = Tools::getValue('merchant');
-
-    $url = 'https://cointopay.com/CloneMasterTransaction?MerchantID=' . $merchant . '&output=json&JsonArray=1';
-    $curl = curl_init();
-    curl_setopt_array($curl, array(
-        CURLOPT_RETURNTRANSFER => 1,
-        CURLOPT_URL => $url,
-    ));
-    $response = curl_exec($curl);
-
-    $http_status = curl_getinfo($curl, CURLINFO_HTTP_CODE);
-    curl_close($curl);
-
-    if ($http_status === 200) {
-        print_r($response);
-    } else {
-        echo "no coins";
-    }
+{extends "$layout"}
+<style>
+#wrapper {
+    background: #fff;
+    box-shadow: inset 0 2px 5px 0 rgba(0,0,0,.11);
+    padding-top: 1.563rem;
 }
+</style>
+{block name="content"}
+  <section  style="padding:40px 0 60px 0;">
+  <h3>Cointopay Payment Status:</h3>
+    You have successfully submitted your payment to Cointopay against Cart Order No {$text|escape:'htmlall':'UTF-8'}
+  </section>
+{/block}
